--- a/view/index.html
+++ b/view/index.html
@@ -235,7 +235,7 @@
                 <div class="chat-list-content">
                     <ul class="chat-list" id="chart">
                         {foreach $onLine as $item}
-                        <li class="chat-list-item">
+                        <li class="chat-list-item" test="{$item.id}">
                             <figure class="avatar user-online">
 <!--                                <img src="images/user-2.png" alt="image">-->
                             </figure>
@@ -1140,7 +1140,6 @@
         console.log('当前用户id',currentUid)
         if(!nowChart || currentUid === nowChart)return;
         getRecentChat(nowChart);
-        console.log(stringify($onLine));
     });
 </script>
 
@@ -1155,14 +1154,25 @@
 
     })
     socket.on('connectCallback' , function (data) {
-        console.log('连接成功的回调',data);
+        console.log('连接成功的回调',data, data.id, uid);
+        var allRecentChat = $('#chart').children('li');
+        var existed = []
+        $.each(allRecentChat, function (i, item){
+            existed.push($(this).attr('test'));
+        })
+        var connnectRetUid = data.id.toString();
 
-        if(data !== null){
+        console.log('start',existed, data.id,connnectRetUid, 'end')
+        if(data && !existed.includes(connnectRetUid)){
             var onLineHtml = '';
-            onLineHtml += "<li class='chat-list-item'><figure class='avatar user-online'><img src='images/user-2.png' alt='image'></figure><div class='list-body' onclick='getRecentChat("+data.id+")'><div class='chat-bttn'><h3 class='mb-0 mt-2'>"+data.user_name+"</h3><p>What's up, how are you?</p></div><div class='list-action mt-2 text-right'><div class='message-count bg-primary'>3</div><small class='text-primary'>03:41 PM</small></div></div></li>"
+            onLineHtml += "<li class='chat-list-item' test="+data.id+"><figure class='avatar user-online'><img src='images/user-2.png' alt='image'></figure><div class='list-body' onclick='getRecentChat("+data.id+")'><div class='chat-bttn'><h3 class='mb-0 mt-2'>"+data.user_name+"</h3><p>What's up, how are you?</p></div><div class='list-action mt-2 text-right'><div class='message-count bg-primary'>3</div><small class='text-primary'>03:41 PM</small></div></div></li>"
 
             $("#chart").append(onLineHtml);
         }
+
+    })
+    socket.on('closeCallback' , function (data) {
+        console.log('下线', data);
 
     })
     socket.on('messageCallback' , function (data) {
@@ -1237,24 +1247,23 @@
             url:"recent",
             data: {'recent_id':nowUid},
             success:function (ret){
-                console.log('ret', ret)
-                if(ret.code !== 10000 || ret.data.length === 0)return;
+                console.log('ret', ret, nowUid)
+                if(ret.code !== 10000 || ret.data.data.length === 0)return;
 
-                console.log('fshdcdsh', ret.data)
+                console.log('fshdcdsh', ret.data.data)
                 var recentChart = '';
-                var dialogueUname = ret.data.data_and;
-                // ret.data.splice('data_and', 1)
-                $.each(ret.data, function (i, item){
+                var dialogueUname = ret.data.uname;
+                $.each(ret.data.data, function (i, item){
                     if(item.from_id==nowUid){
                         recentChart += "<div class='message-item outgoing-message'>";
                     }else{
                         recentChart += "<div class='message-item'>";
                     }
-                    recentChart += "<div class='message-user'><figure class='avatar'></figure><div><h5>";
+                    recentChart += "<div class='message-user'><figure class='avatar'></figure><div>";
                     if(item.from_id == nowUid){
-                        recentChart += {$userInfo['user_name']}
+                        recentChart += '<h5>'+{$userInfo['user_name']}
                     }else{
-                        recentChart += dialogueUname;
+                        recentChart += '<h5>'+dialogueUname;
                     }
                     recentChart += "</h5><div class='time'>"+ item.created +"</div></div></div><div class='message-wrap'>"+ item.msg +"</div></div>"
                 })
